# sentinelops

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  deepseek-e2e.yml  live-model-eval.yml  release-candidate.yml  soak.yml
benchmarks/: control-plane-chaos.json  kubernetes-readiness.json  production-readiness.json  security-readiness.json  topology-readiness.json
demo/services/: Dockerfile  app.py  requirements.txt
deploy/: rbac.yaml
deploy/kind/: kind-config.yaml  workload.yaml
deploy/observability/: services.yaml  stack.yaml
deploy/security-e2e/: anchor-publisher.yaml  runtime-patch.yaml  services.yaml
deploy/topology-e2e/: alertmanager-config.yaml  alertmanager-patch.yaml  base.yaml  control-plane.yaml  migration.yaml
evals/: __init__.py  live_cases.json  live_run.py  report.json  run.py
scripts/: attest_revision_health.py  dev-console.sh  e2e-kind.sh  e2e-observability.sh  e2e-topology.sh  e2e_bootstrap_failure.py  generate_anchor_keys.py  generate_security_e2e_material.py  golden_path_e2e.py  inject-bad-rollout.sh  inject-observability-fault.sh  kind-down.sh  kind-up.sh  kubernetes_readiness.py  live-console.sh  live_console_traffic.py  observability-down.sh  observability-up.sh  observability_e2e.py  production_readiness.py  release_version.py  run-kubernetes-readiness.sh  soak_gate.py  topology_readiness.py
src/sentinelops/: api.py  (+19 more)
tests/: test_agent.py  test_agent_evals.py  test_alert_dedup_store.py  test_alert_ingestion.py  test_anchor_receiver.py  test_api.py  test_architecture_boundaries.py  test_audit_anchor.py  test_audit_anchor_metrics.py  test_audit_anchor_unlock.py  test_audit_chain.py  test_change_backend.py  test_config_secrets.py  test_database_deadline.py  test_demo.py  test_demo_guards.py  test_e2e_bootstrap_failure.py  test_executor.py  test_incident_store.py  test_kubernetes_backend.py  test_kubernetes_readiness.py  test_lab_profiles.py  test_live_console_script.py  test_live_model_evals.py  test_mcp_server.py  test_migrations.py  test_observability_backend.py  test_observability_rules.py  test_openai_compatible_provider.py  test_operator_auth.py  test_policy_and_tools.py  test_postgres_alert_dedup.py  test_postgres_audit.py  test_postgres_migrations.py  test_postgres_store.py  test_production_manifests.py  test_production_readiness.py  test_release_version.py  test_release_workflows.py  test_revision_health.py  (+4 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
(+54 files in other folders)
